--- a/public/css/register.css
+++ b/public/css/register.css
@@ -43,30 +43,12 @@ main {
   cursor: pointer;
 }
 
-#login-button {
-  font-size: 12px;
-  border: none;
-  border-radius: 5px;
-  background: linear-gradient(to right, #0a5275, #003d66); /* New gradient for dark mode */
-  color: white;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  text-decoration: none;
-  flex: 0 0 auto;
-  margin-right: 10px;
-  padding: 10px 20px;
-}
 
 .button-container {
   display: flex;
   justify-content: center;
 }
 
-a#register-text.register-text {
-  position: relative;
-  top: 34.5px;
-  left: 157px;
-}
 
 
 #register-button {
